# test-rust-c-bindings

./: .gitignore  README.md  cabal.project  flake.nix
nix/: project.nix  shell.nix
rust-c-bindings/: output  rust-c-bindings.cabal
rust-c-bindings/lib/: MyBindings.hs
rust-c-bindings/src/: Main.hs
