cabal-version: 3.0
name:          rust-c-bindings
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "Haskell bindings for a rust based C lib."
build-type:    Simple

library rust-c-bindings-lib
  exposed-modules:   MyBindings
  hs-source-dirs:    lib
  default-language:  Haskell2010
  build-depends:
    , base >=4.2 && <5
    , cardano-crypto-class

  pkgconfig-depends: librust_to_c

test-suite rust-c-bindings-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base >=4.2 && <5
    , cardano-crypto-class
    , rust-c-bindings-lib
